<resources>
    <string name="app_name">MyTravelApp</string>
    <string name="start_planning">Start Planning</string>
    <string name="transport_budget">Transport Budget</string>
    <string name="your_location">Your Location</string>
    <string name="transportation_budget">Transportation Budget</string>
    <string name="where_would_you_like_to_go">Where would you like to go?</string>
    <string name="search_for">Search for...</string>
    <string name="my_itinerary">My Itinerary</string>

    <string name="theme_parks">Gardens and Parks</string>

    <string-array name="parks_arrays">
        <item>Bukit Timah Nature Reserve</item>
        <item>Chinese and Japanese Gardens</item>
        <item>East Coast Park</item>
        <item>Fort Canning Park</item>
        <item>Gardens by the Bay</item>
        <item>Jurong Bird Park</item>
        <item>Marina Barrage</item>
        <item>National Orchid Garden</item>
        <item>Singapore Botanic Gardens</item>
        <item>Sungei Buloh Nature Park</item>
        <item>Treetop Walk at MacRitchie Reservoir </item>
    </string-array>

    <string name="theme_religion">Religious</string>

    <string-array name="religion_arrays">
        <item>Al-Abrar Mosque</item>
        <item>Buddha Tooth Relic Temple</item>
        <item>Cathedral of the Good Shepherd</item>
        <item>Chinese Methodist Church</item>
        <item>Church of St Gregory the Illuminator</item>
        <item>Hajjah Fatimah Mosque</item>
        <item>Haw Par Villa</item>
        <item>Sri Krishnan Temple</item>
        <item>Sri Srinivasa Perumal Temple</item>
        <item>Sri Thandayuthapani Temple</item>
        <item>Sultan Mosque</item>
        <item>Thian Hock Keng Temple</item>
    </string-array>

    <string name="theme_heritage">Heritage and Museum</string>

    <string-array name="heritage_arrays">
        <item>ArtScience Museum</item>
        <item>Asian Civilisations Museum</item>
        <item>Chinatown Heritage Centre</item>
        <item>Malay Heritage Centre</item>
        <item>National Museum of Singapore</item>
        <item>Peranakan Museum</item>
        <item>Red Dot Design Museum</item>
        <item>Singapore Art Museum</item>
        <item>Singapore Mint Coin Gallery</item>
        <item>Singapore Navy Museum</item>
        <item>Singapore Philatelic Museum</item>
    </string-array>


    <string name="theme_entertainment">Entertainment</string>

    <string-array name="entertainment_arrays">
        <item>Esplanade - Theatres on the Bay</item>
        <item>Geylang Serai Market</item>
        <item>G-Max Reverse Bungy</item>
        <item>Marina Bay Sands Casino</item>
        <item>Resort World Sentosa Casino</item>
        <item>Sentosa Skyline Luge and Skyride</item>
        <item>Singapore Bazaar and Flea Market</item>
        <item>Singapore Discovery Centre</item>
        <item>Singapore F1 Grand Prix</item>
        <item>Singapore Flyer</item>
        <item>Science Centre Singapore</item>
        <item>Singapore Night Safari</item>
        <item>Singapore Zoo</item>
        <item>Underwater World</item>
        <item>Universal Studios Singapore</item>
    </string-array>

    <string name="theme_food">Food</string>

    <string-array name="food_arrays">
        <item>Lau Pa Sat (Telok Ayer Market)</item>
        <item>Maxwell Road Hawker Centre </item>
    </string-array>



</resources>











