<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mytravelapp.Search">


    <TextView
        android:text="@string/where_would_you_like_to_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/visit"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />



    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search"
        android:layout_toRightOf="@+id/itinerary"
        android:layout_toEndOf="@+id/itinerary"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/theme_parks"
        android:layout_below="@+id/search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="99dp"
        android:entries="@array/parks"
        android:prompt="@string/theme_parks"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/theme_parks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:id="@+id/religion"
        android:entries="@array/religion"
        android:prompt="@string/theme_religion"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heritage"
        android:layout_below="@+id/religion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:entries="@array/heritage"
        android:prompt="@string/theme_heritage"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/search_for"
        android:ems="10"
        android:id="@+id/search"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/visit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/food"
        android:layout_below="@+id/heritage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:entries="@array/food_arrays"
        android:prompt="@string/theme_food"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/entertainment"
        android:layout_marginBottom="45dp"
        android:layout_above="@+id/religion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/entertainment"
        android:prompt="@string/theme_entertainment"/>

    <Button
        android:text="@string/my_itinerary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itinerary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
