<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mytravelapp.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="34dp"
        android:id="@+id/hotel_location"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/your_location"/>

    <Button
        android:text="@string/start_planning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_planning"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/budget"
        android:layout_below="@+id/hotel_location"
        android:layout_alignLeft="@+id/hotel_location"
        android:layout_alignStart="@+id/hotel_location"
        android:layout_marginTop="25dp"
        android:hint="@string/transportation_budget"/>

</RelativeLayout>
